# llm-studio

./: .gitignore  CLAUDE.md  README.md  install.sh  meson.build
.cache/clangd/index/: cmark-glue.c.0DEEDEA97C9C56F3.idx  cmark-glue.h.4173D5808142C83D.idx  webkit-glue.c.226F432F26D76E5E.idx  webkit-glue.h.3C6E98005E6112E5.idx
.claude/: settings.local.json
.github/workflows/: build-release.yml
data/: chat.js  dev.llmstudio.LLMStudio.desktop  dev.llmstudio.LLMStudio.gschema.xml  llm-studio.gresource.xml  meson.build  syntax-highlight.js
src/: application.vala  engine-manager.vala  main.vala  meson.build  window.vala
src/api/: openai-server.vala
src/backend/: backend-manager.vala  backend.vala  llama-backend.vala  vllm-backend.vala
src/huggingface/: hf-client.vala  hf-model.vala
src/models/: chat-history.vala  gguf-reader.vala  model-info.vala  model-manager.vala
src/tools/: tool-manager.vala
src/ui/: chat-params-panel.vala  chat-sidebar-panel.vala  chat-view.vala  download-view.vala  engine-dialog.vala  logs-view.vala  model-browser.vala  model-load-dialog.vala  model-picker-dialog.vala  model-settings-panel.vala  preferences-dialog.vala  server-panel.vala  sidebar.vala  webkit-glue.c  webkit-glue.h
src/utils/: cmark-glue.c  cmark-glue.h  html-renderer.vala  markdown.vala
